# IMC_predict

./: README.md  config.py  pyproject.toml
graph/: create_graphs.py
notebooks/: GNN.py  dataset.ipynb  feature_engineering.ipynb  graph_check.ipynb  train.py
